2007-08-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageType): Import the implementation from
	HEAD.

2007-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Don't allow returned TIFF image
	depth to be anything other than 8/16/32 since it seems that some
	coders in this release may not deal with other values correctly.

2007-08-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c: Eliminate crash when image->depth is not the
	expected 8/16/32/.

2007-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BenchmarkImageCommand): Handle text response
	from 'identify -format'. Benchmark output is now a bit more like
	Unix time.

2007-08-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BenchmarkImageCommand): Added a new 'benchmark'
        GraphicsMagick command which can be used to perform benchmarking
        on any other GraphicsMagick command.
	* coders/tiff.c (WriteTIFFImage): Output G3 TIFF FAX images as per
	the TIFF Class F specification.

2007-08-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/cache.c (PersistCache): Fix a terrible memory leak when
	reading MPC files.  Added Cache reference-count logging.

2007-08-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/version.h.in: Improved Copyright statement formatting.
	* magick/command.c (VersionCommand): Added a feature support list
	to -version output.

2007-07-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/delegate.c (InvokePostscriptDelegate): Eliminate
	doubled-output when running in verbose mode.

2007-07-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh (PACKAGE_VERSION): Released version 1.1.8.
	* magick/delegate.c (InvokePostscriptDelegate): MagickSpawnVP
	requires three arguments.
	* magick/image.c (SetImage): Set is_monochrome flag if image is
	bi-level.
